<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_translate_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onTranslateXClicked"
        android:text="@string/translate_x"
        app:layout_constraintEnd_toStartOf="@+id/button_translate_y"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onScaleClicked"
        android:text="@string/scale"
        app:layout_constraintEnd_toStartOf="@+id/button_alpha"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_translate_x" />

    <Button
        android:id="@+id/button_alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onAlphaClicked"
        android:text="@string/alpha"
        app:layout_constraintEnd_toStartOf="@+id/button_rotation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_scale"
        app:layout_constraintTop_toBottomOf="@+id/button_translate_y" />

    <Button
        android:id="@+id/button_rotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="onRotationClicked"
        android:text="@string/rotate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_alpha"
        app:layout_constraintTop_toBottomOf="@+id/button_translate_y" />

    <Button
        android:id="@+id/button_translate_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="onTranslateYClicked"
        android:text="@string/translate_y"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_translate_x"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider_top"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_alpha" />

    <com.androiddesigntricks.animatethebox.BoxView
        android:id="@+id/view_box"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintBottom_toTopOf="@+id/divider_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_top" />

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/text_translation_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_x"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/x_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/label_y"
        app:layout_constraintEnd_toEndOf="@+id/label_y" />

    <TextView
        android:id="@+id/label_y"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/y_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/label_width"
        app:layout_constraintEnd_toEndOf="@+id/label_width" />

    <TextView
        android:id="@+id/label_alpha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/alpha_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/label_scale"
        app:layout_constraintEnd_toEndOf="@+id/label_scale" />

    <TextView
        android:id="@+id/text_translation_x"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="8888 px"
        app:layout_constraintBottom_toTopOf="@+id/text_translation_y"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/label_x"
        tools:text="8888 px" />

    <TextView
        android:id="@+id/text_translation_y"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="8888 px"
        app:layout_constraintBottom_toTopOf="@+id/text_width"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/label_y"
        tools:text="8888 px" />

    <TextView
        android:id="@+id/text_alpha"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="100 %"
        app:layout_constraintBottom_toTopOf="@+id/text_scale"
        app:layout_constraintStart_toEndOf="@+id/label_alpha"
        tools:text="100 %" />

    <TextView
        android:id="@+id/label_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/scale_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/label_status"
        app:layout_constraintEnd_toEndOf="@+id/label_status" />

    <TextView
        android:id="@+id/text_scale"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="2.0 x"
        app:layout_constraintBottom_toTopOf="@+id/text_status"
        app:layout_constraintStart_toEndOf="@+id/label_scale"
        tools:text="2.0 x" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5060827" />

    <TextView
        android:id="@+id/label_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/width_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_width"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="1000 px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/label_width"
        tools:text="1000 px" />

    <TextView
        android:id="@+id/label_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/status_label"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="STATIONARY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_status"
        tools:text="STATIONARY" />

</android.support.constraint.ConstraintLayout>